# ELSZYIAH

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_NEW.md  demo_elysia.py  demo_llamacpp.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test_elysia.py  test_elysia_api.py  vercel.json
.github/workflows/: ci.yml
backend/: __init__.py  elysia_concierge.py  elysia_lite.py  requirements-ci.txt  requirements-lite.txt  requirements-vercel.txt  requirements.txt  start_server.py  test_client.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER.md  DEVELOPMENT_STATUS.md
frontend/: index.html  package.json  vite.config.js
mobile/: package.json
mobile/src/: App.tsx
mobile/src/screens/: ElysiaConciergeScreen.tsx
scripts/: setup.sh  vercel_deploy.ps1
tests/: test_api.py  test_hosted_adapter.py  test_llamacpp_adapter.py
tests/legacy/: test_elysia.py  test_elysia_api.py
